# ChatBOT

./: README.md  pubspec.yaml
android/app/: CMakeLists.txt  build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: llama_shim.cpp
android/app/src/main/kotlin/com/example/chba/: MainActivity.kt
android/app/src/main/kotlin/com/yourpackage/localai/: RamHelper.kt
android/app/src/main/res/xml/: network_security_config.xml
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
native/: rust_stub.rs
tools/: convert_model.py
